# openclaw-rust

./: .env.example  API_KEY_GUIDE.md  CHANNELS_GUIDE.md  Cargo.toml  LICENSE  README.md  channels.yaml.example
.github/workflows/: ci.yml  release.yml
crates/openagentic-acp/: Cargo.toml
crates/openagentic-acp/src/: envelope.rs  lib.rs  router.rs
crates/openagentic-agent/: Cargo.toml
crates/openagentic-agent/src/: agent.rs  channels.rs  decision.rs  dependencies.rs  device_tools.rs  integration.rs  lib.rs  memory_pipeline.rs  mock.rs  orchestrator.rs  ports.rs  provider.rs  real_device_tools.rs  session_tree.rs  sessions.rs  sub_agent.rs  task.rs  types.rs  ui_tools.rs  voice.rs
crates/openagentic-agent/src/aieos/: parser.rs
crates/openagentic-agent/src/collaboration/: message_bus.rs  metrics.rs  mod.rs  router.rs
crates/openagentic-agent/src/context/: engine.rs
crates/openagentic-agent/src/evo/: adapter.rs  evo_v2_engine.rs  llm_skill_generator.rs  mod.rs  pattern_analyzer.rs  propagation.rs  registry.rs  skill_hot_reloader.rs  skill_loader.rs  skill_tool_adapter.rs  skill_validator.rs  unified_skill_service.rs
crates/openagentic-agent/src/evo/autonomous/: executor.rs  hand.rs  manifest.rs  metrics.rs  mod.rs  optimizer.rs  output.rs  predictor.rs  presets.rs  schedule.rs
crates/openagentic-agent/src/evo/skill/: local.rs  manager.rs  mod.rs  source.rs
crates/openagentic-agent/src/squad/: memory.rs
crates/openagentic-agent/src/task/: classifier.rs
crates/openagentic-ai/: Cargo.toml
crates/openagentic-ai/src/: error.rs  lib.rs  oauth.rs  stream.rs  tokenizer.rs  types.rs
crates/openagentic-browser/: Cargo.toml
crates/openagentic-browser/src/: lib.rs
crates/openagentic-canvas/: Cargo.toml
crates/openagentic-canvas/src/: lib.rs
crates/openagentic-channels/: Cargo.toml
crates/openagentic-channels/src/: base.rs  bluebubbles.rs  dingtalk.rs  discord.rs  email.rs  factory.rs  feishu.rs  googlechat.rs  imessage.rs  lib.rs  manager.rs  matrix.rs  registry.rs  signal.rs  slack.rs  sms.rs  teams.rs  telegram.rs  webchat.rs  wecom.rs  whatsapp.rs  zalo.rs  zalo_personal.rs
crates/openagentic-cli/: Cargo.toml
crates/openagentic-cli/src/: agent_cmd.rs  api_key_cmd.rs  channel_cmd.rs  daemon_cmd.rs  doctor_cmd.rs  evo_cmd.rs  evo_runner.rs  main.rs  message_cmd.rs  onboard_cmd.rs  providers_cmd.rs  skill_cmd.rs  voice_cmd.rs
crates/openagentic-cli/src/commands/: agents.rs  gateway.rs  init.rs
crates/openagentic-cli/src/onboard/: mod.rs  renderer.rs
crates/openagentic-cli/src/onboard/steps/: environment.rs  mod.rs  security.rs  start.rs
crates/openagentic-core/: Cargo.toml
crates/openagentic-core/src/: config.rs  config_loader.rs  error.rs  i18n.rs  lib.rs  user_config.rs
crates/openagentic-device/: Cargo.toml
crates/openagentic-device/src/: camera.rs  capabilities.rs  lib.rs  notification.rs  screen.rs
crates/openagentic-memory/: Cargo.toml
crates/openagentic-memory/src/: ai_adapter.rs  bm25.rs  compress_adapter.rs  compressor.rs  config.rs  embedding.rs  fact_extractor.rs  factory.rs  file_tracker.rs  hybrid_search.rs  lib.rs  manager.rs  recall.rs  schema.rs  scorer.rs  store.rs  traits.rs  types.rs  working.rs  workspace.rs
crates/openagentic-sandbox/: Cargo.toml
crates/openagentic-sandbox/src/: docker.rs  lib.rs  manager.rs  podman.rs
crates/openagentic-security/: Cargo.toml
crates/openagentic-security/src/: lib.rs  validator.rs
crates/openagentic-server/: Cargo.toml
crates/openagentic-server/src/: acp_service.rs  adapters.rs  agent_service.rs  agentic_rag_api.rs  api.rs  app_context.rs  auth_middleware.rs  browser_api.rs  canvas_api.rs  channel_message_handler.rs  channel_service.rs  config_adapter.rs  device_api.rs  device_manager.rs  gateway_service.rs  hardware_tools.rs  lib.rs  orchestrator.rs  server_config.rs  service_factory.rs  skill_service.rs  squad_service.rs  vector_store_registry.rs  voice_service.rs  websocket.rs
crates/openagentic-server/src/agentic_rag/: engine.rs  executor.rs  loop_control.rs  planner.rs  reflector.rs
crates/openagentic-server/src/ports/: adapters.rs
crates/openagentic-tools/: Cargo.toml
crates/openagentic-tools/src/: browser_tools.rs  builtin_tools.rs  lib.rs  mcp.rs  skill_bundle.rs  skill_registry.rs  skill_tool_bridge.rs  tool_registry.rs  wasm_executor.rs
crates/openagentic-vector/: Cargo.toml
crates/openagentic-vector/src/: lib.rs
crates/openagentic-vector/src/store/: factory.rs  lancedb.rs  memory.rs  milvus.rs  mod.rs  pgvector.rs  qdrant.rs  sqlite.rs
crates/openagentic-voice/: Cargo.toml
crates/openagentic-voice/src/: audio.rs  config.rs  lib.rs  stt.rs  talk_mode.rs  tts.rs  types.rs  voice_agent.rs  wake.rs
crates/openagentic-ws/: Cargo.toml
crates/openagentic-ws/src/: axum.rs  connection.rs  error.rs  lib.rs  message.rs  room.rs
crates/openclaw-agent/: Cargo.toml
crates/openclaw-agent/src/: agent.rs  control_flow.rs  decision.rs  integration.rs  lib.rs  orchestrator.rs  ports.rs
crates/openclaw-channels/src/: lib.rs  registry.rs
crates/openclaw-cli/: Cargo.toml
crates/openclaw-cli/src/: evo_cmd.rs  evo_runner.rs  main.rs  wizard_cmd.rs
crates/openclaw-core/: Cargo.toml
crates/openclaw-core/src/: config.rs  config_loader.rs  i18n.rs  lib.rs
crates/openclaw-device/: Cargo.toml
crates/openclaw-device/src/: camera.rs  factory.rs  lib.rs  notification.rs  system.rs
crates/openclaw-memory/: Cargo.toml
crates/openclaw-memory/src/: compress_adapter.rs  compressor.rs  lib.rs  manager.rs  scorer.rs  types.rs  working.rs
crates/openclaw-sandbox/: Cargo.toml
crates/openclaw-sandbox/src/: lib.rs  manager.rs
crates/openclaw-security/: Cargo.toml
crates/openclaw-server/: Cargo.toml
crates/openclaw-server/src/: acp_service.rs  adapters.rs  api.rs  app_context.rs  channel_message_handler.rs  config_adapter.rs  lib.rs  (+6 more)
skills/feishu_multi_account/: SKILL.md
skills/openclaw_config/: SKILL.md
skills/software_development_workflow/: SKILL.md
ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
ui/src/: App.tsx  i18n.ts
(+98 files in other folders)
