[workspace]
resolver = "2"
members = [
    "crates/openagentic-core",
    "crates/openagentic-ai",
    "crates/openagentic-memory",
    "crates/openagentic-vector",
    "crates/openagentic-channels",
    "crates/openagentic-agent",
    "crates/openagentic-voice",
    "crates/openagentic-server",
    "crates/openagentic-cli",
    "crates/openagentic-canvas",
    "crates/openagentic-browser",
    "crates/openagentic-sandbox",
    "crates/openagentic-tools",
    "crates/openagentic-device",
    "crates/openagentic-security",
    "crates/openagentic-acp",
    "crates/openagentic-ws",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
authors = ["OpenAgentic Team"]
license = "MIT"
repository = "https://github.com/openagentic/open-agentic"

[workspace.dependencies]
# Async runtime - base features (individual crates can extend)
tokio = { version = "1.43", default-features = false, features = [
    "rt",
    "sync",
    "macros",
] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"

# MQTT
rumqttc = "0.24"
mqtt = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.12"
serde_yaml = "0.9"

# Testing
tempfile = "3.14"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.12", features = ["v4", "serde"] }

# Regex
regex = "1.11"
once_cell = "1.19"

# Encryption
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
argon2 = "0.5"

# Authentication
jsonwebtoken = "9.3"
hmac = "0.12"

# Encoding
base64 = "0.22"

# Clipboard
arboard = "3.4"

# Hostname
gethostname = "1.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }

# HTTP server
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tokio-stream = "0.1"

# WebSocket
tokio-tungstenite = "0.26"

# Vector stores
qdrant-client = "1.13"

# SQLite with FTS5
rusqlite = { version = "0.32", features = ["bundled"] }

# LanceDB
lancedb = "0.20"

# PostgreSQL with pgvector
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Milvus
milvus = "0.1"

# AI providers (litellm-rs unified LLM gateway)
litellm-rs = { version = "0.3", default-features = false, features = ["redis", "sqlite"] }

# Token counting
tiktoken-rs = "0.6"

# Testing
tokio-test = "0.4"
mockall = "0.13"

# WASM
wasmtime = "25.0"

# OS paths
dirs = "6.0"

# Internal crates
openagentic-core = { path = "crates/openagentic-core" }
openagentic-ai = { path = "crates/openagentic-ai" }
openagentic-memory = { path = "crates/openagentic-memory" }
openagentic-vector = { path = "crates/openagentic-vector" }
openagentic-channels = { path = "crates/openagentic-channels" }
openagentic-agent = { path = "crates/openagentic-agent" }
openagentic-voice = { path = "crates/openagentic-voice" }
openagentic-server = { path = "crates/openagentic-server" }
openagentic-canvas = { path = "crates/openagentic-canvas" }
openagentic-browser = { path = "crates/openagentic-browser" }
openagentic-sandbox = { path = "crates/openagentic-sandbox", default-features = false, features = ["wasm-runtime-wasmtime"] }
openagentic-tools = { path = "crates/openagentic-tools" }
openagentic-device = { path = "crates/openagentic-device" }
openagentic-security = { path = "crates/openagentic-security" }
openagentic-acp = { path = "crates/openagentic-acp" }
openagentic-ws = { path = "crates/openagentic-ws" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package.regex]
opt-level = "z"

[profile.dev]
opt-level = 0
debug = true
