[package]
name = "openagentic-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
testing = []

[dependencies]
openagentic-core.workspace = true
openagentic-ai.workspace = true
openagentic-device.workspace = true
openagentic-memory.workspace = true
openagentic-vector.workspace = true
openagentic-security.workspace = true
openagentic-voice.workspace = true
openagentic-channels.workspace = true
openagentic-tools.workspace = true
openagentic-sandbox.workspace = true
openagentic-canvas.workspace = true
openagentic-browser.workspace = true
openagentic-acp.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
futures.workspace = true
regex.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
dirs.workspace = true

[dev-dependencies]
tokio-test.workspace = true
