[package]
name = "openagentic-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "open-agentic"
path = "src/main.rs"

[dependencies]
openagentic-core.workspace = true
openagentic-ai.workspace = true
openagentic-agent.workspace = true
openagentic-memory.workspace = true
openagentic-vector.workspace = true
openagentic-channels.workspace = true
openagentic-voice.workspace = true
openagentic-server.workspace = true
openagentic-sandbox.workspace = true
openagentic-tools.workspace = true
openagentic-device.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
chrono.workspace = true
lazy_static = "1.4"

clap = { version = "4.5", features = ["derive"] }
shellexpand = "3.1"
dirs.workspace = true
dialoguer = "0.11"
async-trait = "0.1"
