[package]
name = "openagentic-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openagentic-core.workspace = true
openagentic-vector.workspace = true
openagentic-ai.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
tiktoken-rs.workspace = true
tempfile.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["json"] }
tantivy = "0.22"
walkdir = "2"
lancedb = { workspace = true, optional = true }
qdrant-client = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

[features]
default = []
lancedb = ["dep:lancedb", "openagentic-vector/lancedb"]
qdrant = ["dep:qdrant-client", "openagentic-vector/qdrant"]
pgvector = ["dep:sqlx", "openagentic-vector/pgvector"]
