[package]
name = "openagentic-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openagentic-core.workspace = true
openagentic-ai.workspace = true
openagentic-memory.workspace = true
openagentic-vector.workspace = true
openagentic-security.workspace = true
openagentic-channels.workspace = true
openagentic-canvas.workspace = true
openagentic-browser.workspace = true
openagentic-agent.workspace = true
openagentic-device.workspace = true
openagentic-voice.workspace = true
openagentic-tools.workspace = true
openagentic-acp.workspace = true
openagentic-ws.workspace = true
openagentic-sandbox = { workspace = true, features = ["full-security"] }
reqwest = { workspace = true }
regex.workspace = true
dirs.workspace = true
lru = "0.12"
once_cell.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
futures.workspace = true
uuid.workspace = true
chrono.workspace = true
base64.workspace = true
rand.workspace = true

[features]
default = []
per_session_memory = ["testing"]
testing = ["openagentic-agent/testing"]
lancedb = ["openagentic-vector/lancedb"]
qdrant = ["openagentic-vector/qdrant"]
pgvector = ["openagentic-vector/pgvector"]
milvus = ["openagentic-vector/milvus"]

[dev-dependencies]
tempfile.workspace = true
