[package]
name = "openagentic-vector"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openagentic-core.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
rusqlite = { workspace = true, optional = true }
lancedb = { workspace = true, optional = true }
qdrant-client = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
milvus = { workspace = true, optional = true }

[features]
default = []
lancedb = ["dep:lancedb"]
qdrant = ["dep:qdrant-client"]
pgvector = ["dep:sqlx"]
milvus = ["dep:milvus"]
sqlite = ["dep:rusqlite"]
